--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="form">
         <h1>Отправка форму на Telegram</h1>
 
-        <form action="index.js" method="post">
+        <form action="telegram.php" method="post">
             <label for="name">Ваше имя:</label>
             <input type="text" id="name" name="name" placeholder="Введите имя" required="true">
             <label for="phone-number">Ваш номер телефон:</label>
