--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="email" id="email" name="email" placeholder="Введите email" required="true">
 
             <label for="msg">Ваше сообщение:</label>
-            <textarea name="msg" id="msg" cols="30" rows="5" required="true" placeholder="Сообщение..."></textarea>
+            <textarea name="msg" id="msg" cols="30" rows="5" placeholder="Сообщение..."></textarea>
 
             <input type="submit" name="send" id="send" value="Отправить">
         </form>
